examples/pos/emptymatch.effekt
type Void {}

type Either[A, B] {
  Left(a: A)
  Right(b: B)
}

def elim[A](x: Either[A, Void]): A = x match {
  case Left(a) => a
  case Right(v) => v match {}
}

def main() = ()