examples/neg/unresolved_type.effekt
interface Defer {
    def defer[A, B] { prog: () => A } { fin: A => B }: B
}

def impl = new Defer {
    def defer { prog: () => A } { fin: A => B }: B = { // ERROR Could not resolve type A
        val res = prog()
        fin(res)
    }
}
